--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ google-cloud-storage==3.3.1
 google-cloud-bigquery==3.37.0
 google-cloud-bigquery-storage==2.33.1
 google-cloud-bigquery-connection==1.18.3
+google-cloud-documentai==3.6.0
