--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ google-cloud-bigquery==3.37.0
 google-cloud-bigquery-storage==2.33.1
 google-cloud-bigquery-connection==1.18.3
 google-cloud-documentai==3.6.0
+google-genai==1.38.0
